# simple_gemini_client

./: README.md  SimpleGeminiClient.spec  pyproject.toml  run.py  setup.py  system_prompt.txt
simple_gemini_client/: __init__.py  __main__.py  app.py
