[project]
name = "simple-gemini-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py2app>=0.28.8",
    "pyinstaller>=6.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simple_gemini_client"]

[project.optional-dependencies]
dev = [
    "py2app>=0.28.0",
]
